--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,13 +146,15 @@ nav:
     - Admin Guides:
       - Concertim Cloud: 
         - docs/flight-solo/admin-guides/concertim-cloud/index.md
-        - Launch Core Infrastructure: docs/flight-solo/admin-guides/concertim-cloud/launch-core-infra.md
-        - Add Storage Server: docs/flight-solo/admin-guides/concertim-cloud/add-storage.md
-        - Add, Remove & Resize Nodes: docs/flight-solo/admin-guides/concertim-cloud/manage-nodes.md
-        - Managing SLURM Queues: docs/flight-solo/admin-guides/concertim-cloud/manage-slurm.md
-        - Working with GPUs: docs/flight-solo/admin-guides/concertim-cloud/gpu-nodes.md
-        - Managing Users: docs/flight-solo/admin-guides/concertim-cloud/manage-users.md
-        - Understanding Quota Usage: docs/flight-solo/admin-guides/concertim-cloud/understanding-quotas.md
+        - SLURM Multinode:
+          - docs/flight-solo/admin-guides/concertim-cloud/slurm-multinode/index.md
+          - Launch Core Infrastructure: docs/flight-solo/admin-guides/concertim-cloud/slurm-multinode/launch-core-infra.md
+          - Add Storage Server: docs/flight-solo/admin-guides/concertim-cloud/slurm-multinode/add-storage.md
+          - Add, Remove & Resize Nodes: docs/flight-solo/admin-guides/concertim-cloud/slurm-multinode/manage-nodes.md
+          - Managing SLURM Queues: docs/flight-solo/admin-guides/concertim-cloud/slurm-multinode/manage-slurm.md
+          - Working with GPUs: docs/flight-solo/admin-guides/concertim-cloud/slurm-multinode/gpu-nodes.md
+          - Managing Users: docs/flight-solo/admin-guides/concertim-cloud/slurm-multinode/manage-users.md
+          - Understanding Quota Usage: docs/flight-solo/admin-guides/concertim-cloud/slurm-multinode/understanding-quotas.md
   - HPC Workflows:
     - docs/hpc-workflows/index.md
     - Benchmarking:
