Add site_url for 'Stay on Page' version switch
(cherry picked from commit d52a29a1efe6fd76b2b84136c0031c9e23ab5b04)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: OpenFlightHPC
+site_url: 'https://www.openflighthpc.org/'
 repo_url: https://github.com/openflighthpc/docs.openflighthpc.org
 nav:
   - Overview:
