Initial Solo Release Notes page (exc 2024.2)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,7 @@ nav:
   - Flight Solo:
     - docs/flight-solo/index.md
     - Getting Started: docs/flight-solo/quickstart-guide.md
+    - Release Notes: docs/flight-solo/release-notes.md
     - Understanding Flight Solo:
       - docs/flight-solo/understand-solo/index.md
       - User Data: docs/flight-solo/understand-solo/user-data.md
